fix horizontal scroll

--- a/src/style.css
+++ b/src/style.css
@@ -8,7 +8,7 @@ body {
 
     text-align: center;
     font-weight: 400;
-    max-height: 100vh;
+    min-height: 90vh;
 }
 
 h1 {
@@ -34,6 +34,9 @@ h6, p {
     font-size: 2em;
     color: #fff;
     text-shadow: #000 2px 2px 5px;
+}
+#encrypt_out, #decrypt_out {
+    word-break: break-all;
 }
 
 .noselect {
